samples/_failures_safe/1761260030_4c8aae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7c8cea8.c: In function ‘main’:
./samples/SAFE/__tmp_b7c8cea8.c:178:12: error: missing terminating " character
  178 |     printf("%-12s %-15s
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_b7c8cea8.c:178:5: error: expected expression at end of input
  178 |     printf("%-12s %-15s
      |     ^~~~~~
./samples/SAFE/__tmp_b7c8cea8.c:178:5: error: expected declaration or statement at end of input
